--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<html>
-<head>
-
-</head>
-<body>
-
-</body>
+<!doctype html>
+<html class="no-js" lang="">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>recursiveArrays</title>
+        <meta name="description" content="rohit, sehgal, rohit sehgal, arrays, javascript, web, development, recursion, recursive, 2D arrays, 3D arrays, recur">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #000000;">
+        </canvas>
+        <script src="recursiveArrays.js"></script>
+    </body>
 </html>
