--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <button onclick="drawCanvas(buildArray([],10))">Click me</button>
+        <button class="finish-button" onclick="drawCanvas(buildArray([],10))">Click me</button>
         <canvas id="myCanvas" width="1000" height="1000" style="border:1px solid #000000;">
         </canvas>
         <script src="recursiveArrays.js"></script>
