--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>recursiveArrays</title>
         <meta name="description" content="rohit, sehgal, rohit sehgal, arrays, javascript, web, development, recursion, recursive, 2D arrays, 3D arrays, recur">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--[if lt IE 8]>
