--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <button class="finish-button" onclick="drawCanvas(buildArray([],10))">Click me</button>
-        <center>
-            <canvas id="myCanvas" width="500" height="500" style="border:1px solid #000000;">
-            </canvas>
-        </center>
+        <button class="finish-button" onclick="drawCanvas(buildArray([],10))">do function</button>
+        <canvas id="myCanvas" width="500" height="500" style="border:1px solid #000000;">
+        </canvas>
         <script src="recursiveArrays.js"></script>
     </body>
 </html>
